tests/reference/asr-array_01-6a86c32.stderr
semantic error: Empty array constructor is not allowed
 --> tests/errors/array_01.f90:5:5
  |
5 | a = []
  |     ^^ 
